# segatoolsSG

./: meson.build
chronohook/: chronohook.def  config.c  config.h  dllmain.c  meson.build
fatehook/: config.c  config.h  dllmain.c  fatehook.def  meson.build
fateio/: fateio.c  fateio.def  fateio.h  meson.build
platform/: nusec.c
